--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
     </div>
 <div class="made">
-<img src="/images/notepad.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/nnbrows.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/oprabrow.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/msiebrow.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/anybrows.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
+<img src="/images/notepad.gif" alt="Notepad"  vspace="1" height="31" width="88">
+<img src="/images/nnbrows.gif" alt="Notepad"  vspace="1" height="31" width="88">
+<img src="/images/oprabrow.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="/images/msiebrow.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="/images/anybrows.gif" alt="Notepad" vspace="1" height="31" width="88">
 </div>
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
