--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" href="http://res.cloudinary.com/thefader/image/upload/s--wh3WrGPd--/w_760,c_limit,q_jpegmini,f_auto/vaporwave_wp52hr.jpg">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-<button onclick="location.href = '/'" >Home</button><button onclick="location.href = '/about'">About</button><button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button><button onclick="location.href = '/more.html'">More</button>
+<button onclick="location.href = '/mangohyu/'" >Home</button><button onclick="location.href = '/mangohyu/about'">About</button><button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button><button onclick="location.href = '/mangohyu/more.html'">More</button>
 
 <div id="page" class="images center">
 <img src="http://img08.deviantart.net/62ca/i/2016/099/a/3/nature_neon_by_redheadsoldier-d9ycnm9.jpg">
@@ -16,9 +16,9 @@
     <img src="http://img15.deviantart.net/4583/i/2016/248/9/5/vaporwave_by_macplus91-dagn0cf.png">
     <img src="https://secure.static.tumblr.com/7584f10c4c9e6ea83346dcc153804974/dmvoxki/4tGnm8kkc/tumblr_static_tumblr_static_71adrl2zw30o40owwocg4goo8_640.jpg">
     <img src="https://media0.giphy.com/media/l2R09a5L5Bb6ppV7y/200_s.gif">    
-<img src="http://i.imgur.com/lTO9Plf.png">
-<img src="https://atlanticcenturion.files.wordpress.com/2015/06/cover.png">
-<img src="https://i.ytimg.com/vi/rTfa-9aCTYg/hqdefault.jpg">
+    <img src="http://i.imgur.com/lTO9Plf.png">
+    <img src="https://atlanticcenturion.files.wordpress.com/2015/06/cover.png">
+    <img src="https://i.ytimg.com/vi/rTfa-9aCTYg/hqdefault.jpg">
     
     <img src="http://i.imgur.com/0Mw1Nu9.png">
     <img src="https://media.tenor.co/images/a1a0cf7fe587026ae2a03f1fc6468aec/raw">
@@ -29,10 +29,10 @@
     <img src="https://i.ytimg.com/vi/PdpP0mXOlWM/maxresdefault.jpg">
     <div>
 
-<button onclick="location.href = '/?page=1'" >1</button>
-<button onclick="location.href = '/?page=2'" >2</button>
-<button onclick="location.href = '/?page=3'" >3</button>
-<button onclick="location.href = '/?page=4'" >4</button>
+<button onclick="location.href = '/mangohyu/?page=1'" >1</button>
+<button onclick="location.href = '/mangohyu/?page=2'" >2</button>
+<button onclick="location.href = '/mangohyu/?page=3'" >3</button>
+<button onclick="location.href = '/mangohyu/?page=4'" >4</button>
 
 </div>
 
