--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <script>$(".images img").click(function() {
     var src = $(this).attr("src");
     window.open(
-       "/view.html?l=" + src, //change this to your relative path + src
+       "/mangohyu/view.html?l=" + src, //change this to your relative path + src
         '_parent' // <- This is what makes it open in a new window.
     );
 });</script>
