--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <link rel="icon" href="http://res.cloudinary.com/thefader/image/upload/s--wh3WrGPd--/w_760,c_limit,q_jpegmini,f_auto/vaporwave_wp52hr.jpg">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-<button onclick="location.href = '/mangohyu/'" >Home</button><button onclick="location.href = '/mangohyu/about'">About</button><button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button><button onclick="location.href = '/mangohyu/more.html'">More</button>
+<button onclick="location.href = '/mangohyu/'" >Home</button>
+<button onclick="location.href = '/mangohyu/about'">About</button>
+<!-- <button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button> -->
+<!-- <button onclick="location.href = '/mangohyu/more.html'">More</button> -->
 
 <div id="page" class="images center">
 <img src="http://img08.deviantart.net/62ca/i/2016/099/a/3/nature_neon_by_redheadsoldier-d9ycnm9.jpg">
