--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 <title>Vaporwave - About</title>
 <link rel="icon" href="http://res.cloudinary.com/thefader/image/upload/s--wh3WrGPd--/w_760,c_limit,q_jpegmini,f_auto/vaporwave_wp52hr.jpg">
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-<button onclick="location.href = '/mangohyu'" >Home</button><button onclick="location.href = 'mangohyu/about'">About</button><button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button><button onclick="location.href = 'mangohyu/more.html'">More</button>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<button onclick="location.href = '/mangohyu/'" >Home</button>
+<button onclick="location.href = '/mangohyu/about'">About</button>
+<!-- <button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button> -->
+<!-- <button onclick="location.href = '/mangohyu/more.html'">More</button> -->
 
 <div class="images">
 <h1 class="title"><span class="cap">A</span>bout</h1>
