--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>Vaporwave - Home</title>
+<title>mangohyu - Home</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="http://res.cloudinary.com/thefader/image/upload/s--wh3WrGPd--/w_760,c_limit,q_jpegmini,f_auto/vaporwave_wp52hr.jpg">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -9,7 +9,7 @@
 <!-- <button onclick="location.href = '/mangohyu/more.html'">More</button> -->
 
 <div id="page" class="images center">
-<img src="http://img08.deviantart.net/62ca/i/2016/099/a/3/nature_neon_by_redheadsoldier-d9ycnm9.jpg">
+    <img src="https://t1.daumcdn.net/cafeattach/1XjOQ/52a41fec38cbd404b922f0a91fca906d33840bb6">
     <img src="http://img10.deviantart.net/a22e/i/2015/241/9/a/synthcity_by_kirillotr0n-d97mhif.jpg">
     <img src="http://pre15.deviantart.net/fa3a/th/pre/f/2015/300/8/e/highway_by_axiomdesign-d9em9fs.jpg">
     <img src="https://lh3.googleusercontent.com/G3fmYyKP1FRv9GhhqUaJU2vVpLiXcaqE8EgHqYr073pI4gskb9pElEoLAD9xVx7ao0ba=h900">
