--- a/view.html
+++ b/view.html
@@ -4,7 +4,10 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<button onclick="window.history.back();" >Back</button><button onclick="location.href = '/about'">About</button><button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button><button onclick="location.href = '/more.html'">More</button>
+<button onclick="window.history.back();" >Back</button>
+<button onclick="location.href = 'mangohyu/about'">About</button>
+<!-- <button onclick="location.href = 'https://www.reddit.com/r/Vaporwave/'">Reddit</button>
+<button onclick="location.href = '/more.html'">More</button> -->
 <style>
     @media only screen and (max-width: 810px) {
     .view {height: auto !important;
@@ -19,11 +22,11 @@
     </div>
 </div>
 <div class="made">
-<img src="/images/notepad.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/nnbrows.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/oprabrow.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/msiebrow.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
-<img src="/images/anybrows.gif" alt="Notepad" border="0" vspace="1" height="31" width="88">
+<img src="mangohyu/images/notepad.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="mangohyu/images/nnbrows.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="mangohyu/images/oprabrow.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="mangohyu/images/msiebrow.gif" alt="Notepad" vspace="1" height="31" width="88">
+<img src="mangohyu/images/anybrows.gif" alt="Notepad" vspace="1" height="31" width="88">
 </div>
 <script type="text/javascript">
 $(document).ready(function() {
